; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/mmgr/extr_portalmem.c_CreateNewPortal.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/mmgr/extr_portalmem.c_CreateNewPortal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CreateNewPortal.unnamed_portal_count = internal global i32 0, align 4
@MAX_PORTALNAME_LEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"<unnamed portal %u>\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CreateNewPortal() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  %3 = load i32, i32* @MAX_PORTALNAME_LEN, align 4
  %4 = zext i32 %3 to i64
  %5 = call i8* @llvm.stacksave()
  store i8* %5, i8** %1, align 8
  %6 = alloca i8, i64 %4, align 16
  store i64 %4, i64* %2, align 8
  br label %7

7:                                                ; preds = %15, %0
  %8 = load i32, i32* @CreateNewPortal.unnamed_portal_count, align 4
  %9 = add i32 %8, 1
  store i32 %9, i32* @CreateNewPortal.unnamed_portal_count, align 4
  %10 = load i32, i32* @CreateNewPortal.unnamed_portal_count, align 4
  %11 = call i32 @sprintf(i8* %6, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = call i32* @GetPortalByName(i8* %6)
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %7
  br label %16

15:                                               ; preds = %7
  br label %7

16:                                               ; preds = %14
  %17 = call i32 @CreatePortal(i8* %6, i32 0, i32 0)
  %18 = load i8*, i8** %1, align 8
  call void @llvm.stackrestore(i8* %18)
  ret i32 %17
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #2

declare dso_local i32* @GetPortalByName(i8*) #2

declare dso_local i32 @CreatePortal(i8*, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
